--- a/src/styles/ResumeBuilder.css
+++ b/src/styles/ResumeBuilder.css
@@ -1,5 +1,10 @@
 .edit-bar {
-  background-color: var(--air-blue);
-  width: 50%;
+  width: 40%;
   height: 100%;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  background-color: var(--air-blue);
 }
