--- a/src/styles/Panel.css
+++ b/src/styles/Panel.css
@@ -1,6 +1,22 @@
 .panel {
   width: 500px;
-  height: auto;
   background-color: white;
   color: black;
+  border-radius: 1rem;
+}
+
+.panel-tab {
+  padding: 1rem;
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.panel-tab.active {
+  border-bottom: 1px solid black;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 }
