Style Editor panel and layout

--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,38 @@
   -moz-osx-font-smoothing: grayscale;
 
   --air-blue: #669BBC;
+  --prussian-blue: #003049;
   --papaya-whip: #FDF0D5;
 }
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  color: inherit;
 }
 
 #root {
   height: 100vh;
   background-color: var(--papaya-whip);
+  display: flex;
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
