--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -1,8 +1,12 @@
 .label-name {
   font-size: 0.8rem;
-  transform: translate(4px, 4px);
+  transform: translate(4px, 2px);
 }
 
 input {
+  border: 1px solid var(--prussian-blue);
+  border-radius: 5px;
+  height: 1.5rem;
+  padding: 0rem 0.25rem;
   width: 100%;
 }
