--- a/src/styles/ResumeBuilder.css
+++ b/src/styles/ResumeBuilder.css
@@ -1,10 +1,20 @@
 .edit-bar {
-  width: 40%;
-  height: 100%;
+  flex: 0 1 650px;
+  min-width: 400px;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
   background-color: var(--air-blue);
+  color: var(--prussian-blue);
+  overflow: auto;
+}
+
+.display {
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--papaya-whip);
 }
