--- a/src/styles/Panel.css
+++ b/src/styles/Panel.css
@@ -1,7 +1,8 @@
 .panel {
   width: 100%;
-  background-color: white;
   border-radius: 1rem;
+  background-color: white;
+  box-shadow: var(--shadow);
 }
 
 .panel-tab {
@@ -14,17 +15,30 @@
   border-bottom: 1px solid var(--prussian-blue);
 }
 
-.inputs {
+.inputs-container { /*maybe rename this*/
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+}
+
+.input-group {
   padding: 1rem;
 }
 
+.input-group.project, .input-group.work {
+  border-bottom: 1px solid var(--prussian-blue);
+}
+
 .add-more-btn {
-  background: none;
+  background: white;
   border: none;
   width: 100%;
   padding: 0.75rem;
-  border-radius: 0 0 1rem 1rem;   
+  border-radius: 0 0 1rem 1rem;
+  font-size: 1rem;
+  will-change: background-color;
+  transition: background-color 100ms linear;
+}
+
+.add-more-btn:hover {
+  background-color: var(--light-gray);
 }
