--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --prussian-blue: #003049;
   --papaya-whip: #FDF0D5;
   --light-gray: #E9ECEF;
+  --red-pantone: #E63946;
 
   /* Shadow styling provided by Josh W. Comeau
     at https://www.joshwcomeau.com/shadow-palette/ */
