--- a/src/styles/Panel.css
+++ b/src/styles/Panel.css
@@ -25,7 +25,23 @@
 }
 
 .input-group.project, .input-group.work {
+  position: relative;
   border-bottom: 1px solid var(--prussian-blue);
+}
+
+.delete-btn {
+  position: absolute;
+  top: 0.25rem;
+  right: 0.25rem;
+  height: 25px;
+  width: 25px;
+  border-radius: 100%;
+  border: none;
+  background-color: var(--red-pantone);
+  background-image: url('/cross.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 12px;
 }
 
 .add-more-btn {
